--- a/radioButton/src/app/app.component.html
+++ b/radioButton/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="radioButton">
-  <div class="radio"><p-radioButton value="Option 1" label="Option 1" [(ngModel)]="value"></p-radioButton></div>
-  <div class="radio"><p-radioButton value="Option 2" label="Option 2" [(ngModel)]="value"></p-radioButton></div>
-  <div class="radio"><p-radioButton value="Option 3" label="Option 3" [(ngModel)]="value"></p-radioButton></div>
+  <p-radioButton class="radio" value="Option 1" label="Option 1" [(ngModel)]="value"></p-radioButton>
+  <p-radioButton class="radio" value="Option 2" label="Option 2" [(ngModel)]="value"></p-radioButton>
+  <p-radioButton class="radio" value="Option 3" label="Option 3" [(ngModel)]="value"></p-radioButton>
 </div>
 <div>Selected Value = {{value||'none'}}</div>
