--- a/sample/src/app/app.component.html
+++ b/sample/src/app/app.component.html
@@ -4,6 +4,10 @@
   </div>
   <hr />
   <div class="component">
+    <calendar></calendar>
+  </div>
+  <hr />
+  <div class="component">
     <checkbox></checkbox>
   </div>
   <hr />
